// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept "component" prop 1`] = `
.emotion-1 {
  display: inline-block;
}

.emotion-1:not(:first-child) {
  margin-left: 0.25rem;
}

.emotion-0 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #24252E;
  font-weight: bold;
  padding: calc(0.4375rem + 1px) 0.4375rem 0.4375rem 0.4375rem;
  line-height: 1rem;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  outline: 0;
  border: 1px solid #8F8FA2;
  border-bottom: none;
  background: #F0F0F5;
  -webkit-transition: background .15s,border-color .15s;
  transition: background .15s,border-color .15s;
}

.emotion-0:not(.disabled):hover {
  cursor: pointer;
  background: #D3D4DD;
}

.emotion-0:not(.disabled):active {
  background: #D3D4DD;
  box-shadow: inset 0 1px 4px 0 rgba(0,0,0,0.14),inset 0 2px 4px 0 rgba(0,0,0,0.08);
}

.emotion-0:focus {
  box-shadow: inset 0 0 0 2px #0069D0;
  border-radius: 4px;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  list-style: none;
  padding: 0;
  margin: 0;
  font-size: 0.875rem;
  border-bottom: 1px solid #D3D4DD;
}

.emotion-4 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #24252E;
  font-weight: bold;
  padding: calc(0.4375rem + 1px) 0.4375rem 0.4375rem 0.4375rem;
  line-height: 1rem;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  outline: 0;
  border: 1px solid #8F8FA2;
  border-bottom: none;
  background: #F0F0F5;
  -webkit-transition: background .15s,border-color .15s;
  transition: background .15s,border-color .15s;
  color: #0069D0;
  background: #FFFFFF;
  border-top: 4px solid #0069D0;
  padding-top: calc(0.4375rem - 2px);
  position: relative;
}

.emotion-4:not(.disabled):hover {
  cursor: pointer;
  background: #D3D4DD;
}

.emotion-4:not(.disabled):active {
  background: #D3D4DD;
  box-shadow: inset 0 1px 4px 0 rgba(0,0,0,0.14),inset 0 2px 4px 0 rgba(0,0,0,0.08);
}

.emotion-4:focus {
  box-shadow: inset 0 0 0 2px #0069D0;
  border-radius: 4px;
}

.emotion-4::before {
  content: "";
  position: absolute;
  bottom: -1px;
  left: 0;
  right: 0;
  height: 1px;
  background: #FFFFFF;
}

.emotion-4:not(.disabled):hover {
  background: #F0F0F5;
}

.emotion-4:not(.disabled):active {
  background: #F0F0F5;
}

.emotion-6 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #24252E;
  font-weight: bold;
  padding: calc(0.4375rem + 1px) 0.4375rem 0.4375rem 0.4375rem;
  line-height: 1rem;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  outline: 0;
  border: 1px solid #8F8FA2;
  border-bottom: none;
  background: #F0F0F5;
  -webkit-transition: background .15s,border-color .15s;
  transition: background .15s,border-color .15s;
  color: #AAAAB9;
}

.emotion-6:not(.disabled):hover {
  cursor: pointer;
  background: #D3D4DD;
}

.emotion-6:not(.disabled):active {
  background: #D3D4DD;
  box-shadow: inset 0 1px 4px 0 rgba(0,0,0,0.14),inset 0 2px 4px 0 rgba(0,0,0,0.08);
}

.emotion-6:focus {
  box-shadow: inset 0 0 0 2px #0069D0;
  border-radius: 4px;
}

.emotion-6:hover {
  cursor: not-allowed;
}

<div>
  <ul
    class="emotion-8"
    role="tablist"
  >
    <li
      class="emotion-1"
    >
      <a
        class="emotion-0"
        href="/"
        role="tab"
        tabindex="0"
      >
        Home
      </a>
    </li>
    <li
      class="emotion-1"
    >
      <a
        class="emotion-0"
        href="/"
        role="tab"
        tabindex="-1"
      >
        Test
      </a>
    </li>
    <li
      class="emotion-1"
    >
      <a
        class="emotion-4"
        href="/"
        role="tab"
        tabindex="-1"
      >
        Active
      </a>
    </li>
    <li
      class="emotion-1"
    >
      <a
        class="emotion-6 disabled"
        href="/"
        role="tab"
      >
        Disabled
      </a>
    </li>
  </ul>
</div>
`;

exports[`should accept "style" prop 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #24252E;
  font-weight: bold;
  padding: calc(0.4375rem + 1px) 0.4375rem 0.4375rem 0.4375rem;
  line-height: 1rem;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  outline: 0;
  border: 1px solid #8F8FA2;
  border-bottom: none;
  background: #F0F0F5;
  -webkit-transition: background .15s,border-color .15s;
  transition: background .15s,border-color .15s;
}

.emotion-0:not(.disabled):hover {
  cursor: pointer;
  background: #D3D4DD;
}

.emotion-0:not(.disabled):active {
  background: #D3D4DD;
  box-shadow: inset 0 1px 4px 0 rgba(0,0,0,0.14),inset 0 2px 4px 0 rgba(0,0,0,0.08);
}

.emotion-0:focus {
  box-shadow: inset 0 0 0 2px #0069D0;
  border-radius: 4px;
}

.emotion-1 {
  display: inline-block;
  color: red;
}

.emotion-1:not(:first-child) {
  margin-left: 0.25rem;
}

<div>
  <li
    class="emotion-1"
  >
    <span
      class="emotion-0"
      role="tab"
    >
      Item
    </span>
  </li>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-1 {
  display: inline-block;
}

.emotion-1:not(:first-child) {
  margin-left: 0.25rem;
}

.emotion-0 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #24252E;
  font-weight: bold;
  padding: calc(0.4375rem + 1px) 0.4375rem 0.4375rem 0.4375rem;
  line-height: 1rem;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  outline: 0;
  border: 1px solid #8F8FA2;
  border-bottom: none;
  background: #F0F0F5;
  -webkit-transition: background .15s,border-color .15s;
  transition: background .15s,border-color .15s;
}

.emotion-0:not(.disabled):hover {
  cursor: pointer;
  background: #D3D4DD;
}

.emotion-0:not(.disabled):active {
  background: #D3D4DD;
  box-shadow: inset 0 1px 4px 0 rgba(0,0,0,0.14),inset 0 2px 4px 0 rgba(0,0,0,0.08);
}

.emotion-0:focus {
  box-shadow: inset 0 0 0 2px #0069D0;
  border-radius: 4px;
}

<div>
  <li
    class="emotion-1"
  >
    <span
      class="emotion-0"
      role="tab"
    >
      Item
    </span>
  </li>
</div>
`;
